--- a/spinwheelapp/templates/signup.html
+++ b/spinwheelapp/templates/signup.html
@@ -83,6 +83,19 @@
                 <label for="id_shop_name">Shop Name:</label>
                 <input type="text" name="shop_name" id="id_shop_name" required>
             </div>
+
+             <div class="form-group">
+                <label for="{{ form.whatsapp_number.id_for_label }}">WhatsApp Number:</label>
+                {{ form.whatsapp_number }}
+                <span class="help-text">{{ form.whatsapp_number.help_text }}</span>
+                {% if form.whatsapp_number.errors %}
+                    <ul class="errorlist">
+                        {% for error in form.whatsapp_number.errors %}
+                            <li>{{ error }}</li>
+                        {% endfor %}
+                    </ul>
+                {% endif %}
+            </div>
             
             <div class="form-group">
                 <label for="id_password1">Password:</label>
